<resources>
    <string name="app_name">setting_app</string>
    <string name="second_title">second_title</string>


    <string name="setting">https://DinaDurykina.github.io/web4app_setting.json</string>
    <string name="setting_assets">settings/web4app_setting.json</string>
    <string name="action_calc">Calc</string>
    <string name="action_help">Help</string>
    <string name="action_template">Template</string>

    <string name="action_service">Service</string>
    <string name="action_http_settings">setting.json</string>
    <string name="action_vert_settings">vertical.json</string>
    <string name="action_gor_settings">gorizont.json</string>

    <string name="action_settings">Settings</string>


    <string name="menu_mobile">Mobile</string>
    <string name="menu_native">Native</string>
    <string name="menu_reactive">Reactive</string>
    <string name="menu_reactnativ">Reactive Native</string>
    <string name="menu_nativetab">Native tab</string>
    <string name="menu_reactivetab">Reactive tab</string>
    <string name="menu_reactnativtab">Reactive Native tab</string>

    <string name="menu_native3">Native</string>
    <string name="menu_reactive3">Reactive</string>
    <string name="menu_reactnativ3">Reactive Native</string>
    <string name="menu_native4">Native</string>
    <string name="menu_reactive4">Reactive</string>
    <string name="menu_reactnativ4">Reactive Native</string>

    <string name="menu_wrap">Wrap</string>
    <string name="nav_logo">Wrapper Patterns</string>
    <string name="site">app4web.site</string>
    <string name="nav_logo_wrap">Choose a template for your site</string>
    <string name="nav_logo_template">Template your app</string>
    <string name="title_activity_second">SecondActivity</string>
</resources>
